--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
     <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.2/dist/js/bootstrap.bundle.min.js" integrity="sha384-MrcW6ZMFYlzcLA8Nl+NtUVF0sA7MsXsP1UyJoMp4YLEuNSfAP+JcXn/tWtIaxVXM" crossorigin="anonymous"></script>
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.7.1/font/bootstrap-icons.css">
     <link rel="stylesheet" href="style.css">
+    <script defer src="main.js"></script>
     <title>Generateur de calcul</title>
 </head>
 <body>
@@ -16,16 +17,21 @@
     <h2 class="text-center">Indiquer le résultat du calcul ci-dessous au dixième près (1 chiffre après la virgule)</h2>
     </header>
 
-    <main>
-        <p></p> <!-- * Affichera le calcul -->
-        <input type="number"> 
-        <p></p> <!-- * Indication -->
-        <button class="btn btn-success">Soumettre</button>
-        <button class="btn btn-alert">Recommencer</button>
+    <main class="container">
+        <div class="row">
+            <div class="col-md-12 d-flex flex-column text-center">
+                <p id="formule" class="mt-3 fw-bolder fs-1"></p> <!-- ? Affichera le calcul -->
+                <input id="reponseUtilisateur" class ="col-md-3 mx-auto mt-2" type="number"> 
+                <p id="resultat"></p> <!-- * Indication -->
+                <button class="btn btn-success col-md-3 mx-auto shadow-2-strong fw-bolder mt-5" onclick="tentative()">Soumettre</button>
+                <button class="btn btn-danger col-md-3 mx-auto shadow-2-strong fw-bolder my-5" onclick="recommencer()">Recommencer</button>
+                <p id="phraseFinal" class="mt-1 fw-bolder"></p>
+            </div>
+        </div>
     </main>
 
     <footer>
-        <p>© Test Typescript</p>
+        <p class="text-center">© Test Typescript</p>
     </footer>
 
 </body>
